@@ -5,5 +5,5 @@
     display: block;
   }
 
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
